--- a/index.html
+++ b/index.html
@@ -1451,52 +1451,6 @@ const CLIENT_ID = '894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleuser
 const SCOPES = 'https://www.googleapis.com/auth/drive.file';
 let tokenClient, gapiInited = false, gisInited = false;
 
-
-
-// === Google Drive Auth Helper (for both ☁️Google / ↓Google) ===
-async function ensureDriveAuth({ prompt = '' } = {}) {
-  // Try to reuse existing access token from gapi.auth (if any)
-  try {
-    const t = (window.gapi && gapi.auth && typeof gapi.auth.getToken === 'function') ? gapi.auth.getToken() : null;
-    if (t && t.access_token) return t.access_token;
-  } catch (e) { /* ignore */ }
-
-  // Initialize token client if needed
-  try {
-    if (!window.tokenClient) {
-      if (typeof gdriveInit === 'function') {
-        try { gdriveInit(); } catch (e) {}
-      }
-    }
-  } catch (e) { /* ignore */ }
-
-  // Request a new token via GIS
-  return await new Promise((resolve, reject) => {
-    if (!window.google || !google.accounts || !google.accounts.oauth2 || !window.tokenClient) {
-      reject(new Error('Google 身分服務尚未就緒，請稍後再試。'));
-      return;
-    }
-    try {
-      window.tokenClient.callback = (resp) => {
-        if (resp && resp.access_token) {
-          // Bridge into gapi.auth for code using gapi.auth.getToken()
-          try {
-            if (window.gapi && gapi.auth && typeof gapi.auth.setToken === 'function') {
-              gapi.auth.setToken({ access_token: resp.access_token });
-            }
-          } catch (e) { /* no-op */ }
-          resolve(resp.access_token);
-        } else {
-          reject(resp);
-        }
-      };
-      window.tokenClient.requestAccessToken({ prompt });
-    } catch (e) {
-      reject(e);
-    }
-  });
-}
-
 function gdriveInit() {
   gapi.load('client', async () => {
     await gapi.client.init({ apiKey: '', discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"] });
@@ -1516,9 +1470,7 @@ function gdriveInit() {
   });
 }
 
-async function uploadBackupToDrive() {
-  const BACKUP_FILENAME = '清洗訂單_備份.json'; // 單一備份檔名（每次覆蓋）
-
+function uploadBackupToDrive() {
   const data = {
     orders: JSON.parse(localStorage.getItem('yl_clean_orders_v1') || '[]'),
     staffList: JSON.parse(localStorage.getItem('yl_clean_staff_v1') || '[]'),
@@ -1526,71 +1478,24 @@ async function uploadBackupToDrive() {
     exportedAt: new Date().toISOString()
   };
   const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+  const metadata = {
+    name: `清洗訂單_${new Date().toISOString().split('T')[0]}.json`,
+    mimeType: 'application/json'
+  };
 
-  const authHeader = new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token });
+  const form = new FormData();
+  form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
+  form.append('file', blob);
 
-  // 1) 先找是否已存在同名備份檔
-  const query = encodeURIComponent(`name = '${BACKUP_FILENAME}' and trashed = false`);
-  fetch(`https://www.googleapis.com/drive/v3/files?q=${query}&spaces=drive&fields=files(id,name)`, {
-    method: 'GET',
-    headers: authHeader
+  fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
+    method: 'POST',
+    headers: new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token }),
+    body: form
   })
-  .then(r => r.json())
-  .then(async listRes => {
-    const files = Array.isArray(listRes.files) ? listRes.files : [];
-
-    if (files.length > 0) {
-      // 2a) 有舊檔：用 PATCH + uploadType=media 直接覆蓋內容
-      const fileId = files[0].id;
-
-      const resp = await fetch(`https://www.googleapis.com/upload/drive/v3/files/${fileId}?uploadType=media`, {
-        method: 'PATCH',
-        headers: new Headers({
-          'Authorization': 'Bearer ' + gapi.auth.getToken().access_token,
-          'Content-Type': 'application/json'
-        }),
-        body: blob
-      });
-
-      const json = await resp.json();
-      if (json && json.id) {
-        // 若有重複的同名檔案，清乾淨只保留第一個
-        if (files.length > 1) {
-          for (let i = 1; i < files.length; i++) {
-            try {
-              await fetch(`https://www.googleapis.com/drive/v3/files/${files[i].id}`, {
-                method: 'DELETE',
-                headers: authHeader
-              });
-            } catch (e) { /* 忽略刪除失敗，不影響覆蓋成功 */ }
-          }
-        }
-        alert('✅ 備份成功（已覆蓋舊檔）');
-      } else {
-        alert('❌ 覆蓋備份失敗：' + JSON.stringify(json));
-      }
-    } else {
-      // 2b) 沒有舊檔：建立一個固定檔名的備份檔
-      const metadata = {
-        name: BACKUP_FILENAME,
-        mimeType: 'application/json'
-      };
-      const form = new FormData();
-      form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-      form.append('file', blob);
-
-      const resp = await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
-        method: 'POST',
-        headers: authHeader,
-        body: form
-      });
-      const json = await resp.json();
-      if (json && json.id) {
-        alert('✅ 備份成功（已建立固定檔）');
-      } else {
-        alert('❌ 建立備份檔失敗：' + JSON.stringify(json));
-      }
-    }
+  .then(res => res.json())
+  .then(res => {
+    if (res.id) alert('✅ 備份成功，上傳至你的 Google Drive！');
+    else alert('❌ 備份失敗：' + JSON.stringify(res));
   })
   .catch(err => {
     console.error(err);
@@ -1613,87 +1518,7 @@ window.onload = () => {
   };
   document.body.appendChild(script);
 };
-</script><script>
-
-function restoreBackupFromDrive() {
-  const BACKUP_FILENAME = '清洗訂單_備份.json';
-  try {
-    let tokenObj = (gapi && gapi.auth && gapi.auth.getToken) ? gapi.auth.getToken() : null;
-let accessToken = tokenObj && tokenObj.access_token;
-if (!accessToken) {
-  try { accessToken = await ensureDriveAuth({ prompt: '' }); }
-  catch(e) { alert('需要 Google 授權才能還原備份'); return; }
-}
-
-
-    if (!confirm('這會用雲端備份覆蓋本地資料（訂單/人員/聯絡方式）。要繼續嗎？')) return;
-
-    const headers = new Headers({ 'Authorization': 'Bearer ' + accessToken });
-    const query = encodeURIComponent(`name = '${BACKUP_FILENAME}' and trashed = false`);
-
-    // 先找最新的同名檔
-    fetch(`https://www.googleapis.com/drive/v3/files?q=${query}&spaces=drive&fields=files(id,name,modifiedTime)&orderBy=modifiedTime desc`, {
-      method: 'GET',
-      headers
-    })
-    .then(r => r.json())
-    .then(async listRes => {
-      const files = Array.isArray(listRes.files) ? listRes.files : [];
-      if (files.length === 0) {
-        alert('找不到雲端備份檔（清洗訂單_備份.json）。請先用「☁️Google」建立一次。');
-        return;
-      }
-      const fileId = files[0].id;
-      const resp = await fetch(`https://www.googleapis.com/drive/v3/files/${fileId}?alt=media`, {
-        method: 'GET',
-        headers
-      });
-      if (!resp.ok) {
-        alert('下載備份失敗：' + (await resp.text()));
-        return;
-      }
-      const json = await resp.json();
-      const orders = Array.isArray(json.orders) ? json.orders : [];
-      const staffList = Array.isArray(json.staffList) ? json.staffList : [];
-      const contactList = Array.isArray(json.contactList) ? json.contactList : [];
-
-      localStorage.setItem('yl_clean_orders_v1', JSON.stringify(orders));
-      localStorage.setItem('yl_clean_staff_v1', JSON.stringify(staffList));
-      localStorage.setItem('yl_clean_contact_v1', JSON.stringify(contactList));
-
-      // 嘗試刷新 UI
-      try {
-        if (typeof refreshTable === 'function') refreshTable();
-        if (typeof rebuildSummary === 'function') rebuildSummary();
-      } catch (e) {/* 忽略 */}
-
-      alert('✅ 已從 Google 還原備份（本地資料已覆蓋）。');
-    })
-    .catch(err => {
-      console.error(err);
-      alert('❌ 還原過程發生錯誤。');
-    });
-  } catch (e) {
-    console.error(e);
-    alert('❌ 還原過程發生錯誤。');
-  }
-}
-
-// 綁定還原按鈕事件
-window.addEventListener('DOMContentLoaded', ()=>{
-  var btn = document.getElementById('btnDriveRestore');
-  if (btn) btn.addEventListener('click', restoreBackupFromDrive);
-});
-</script>
-<script>
-
-// 確保載入後先初始化 Google 物件（供 ↓Google 首次直接授權用）
-window.addEventListener('DOMContentLoaded', () => {
-  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch (e) {}
-});
-
-</script>
-</body>
+</script></body>
 </html>
 <script>
 // 強制手風琴預設收合（解決部分瀏覽器 <details> 預設展開問題）
@@ -1702,5 +1527,13 @@ window.addEventListener('DOMContentLoaded', () => {
   const exp = document.getElementById('expenseAcc');
   if (order) order.open = false;
   if (exp) exp.open = false;
+});
+</script>
+
+<script>
+window.addEventListener('DOMContentLoaded', () => {
+  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch(e){}
+  const btn = document.getElementById('btnDriveRestore');
+  if (btn) btn.addEventListener('click', restoreBackupFromDrive);
 });
 </script>
